# TDI

./: README.md
guia1/: Guia1.ipynb  fruta.tif  guia1.txt  profile_row_100.pkl  profile_row_100.txt  pyproject.toml  sizes.pkl
guia1/.ipynb_checkpoints/: Guia1-checkpoint.ipynb
guia2/: guia2.txt  pyproject.toml
guia3/: dataset_imagenes_simple.csv  guia3.txt  pyproject.toml
guia3/.ipynb_checkpoints/: guia3-checkpoint.ipynb
guia3/TP3-ej1-2/: TP3_P1a.ipynb  TP3_P1b.ipynb  TP3_P1c.ipynb  TP3_P1d.ipynb  TP3_P2.ipynb
guia3/TP3-ej1-2/.ipynb_checkpoints/: TP3_P1b-checkpoint.ipynb  TP3_P1c-checkpoint.ipynb  TP3_P1d-checkpoint.ipynb  TP3_P2-checkpoint.ipynb
