[tool.poetry]
name = "guia1"
version = "0.1.0"
description = "Guia practica 1"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
